# biohack

./: .gitignore  README.md  bamlTest.py  biohack.py  headLance.py  parseJson.py  process_sources.py  pyproject.toml  requirements.txt
baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: assertions.baml  clients.baml  hypothesis.baml  nanopub.baml
defs/: etl_convert.py  etl_fetch.py  etl_gliner.py  etl_query.py
docs/: assertionPrompt.txt  flow.d2  lanceTables.md  mcpConcept.md  notes.md  results1.json  sprintIdea1.md
docs/json/: 2202.05901v_assertion.json  2202.05901v_idea.json  2409.09230v1_assertion.json  2409.09230v1_idea.json  README.md  agu_network_analysis_preprin_assertion.json  agu_network_analysis_preprin_idea.json  eartharxiv-first-year-v1_preprin_assertion.json  eartharxiv-first-year-v1_preprin_idea.json  fspas-09-83844_assertion.json  fspas-09-83844_idea.json  uhi-paper_eartharxi_assertion.json  uhi-paper_eartharxi_idea.json
notebooks/: enityGraph.ipynb  graphBuilder.py  graphClient.ipynb  kuzuVectorTest.py  nanoGraph.ipynb  testGraphML.graphml  typeTypeView.ipynb
output/: biograph.nt  jld-sitemap.xml  jldnew-sitemap.xml
scripts/: lancedbScanner.py  loadDirToTriplestore.sh  loadSitemapToTriplestore.sh
sparql/: getsubjects.rq  scratch.rq
tests/: test_etl_convert.py  test_etl_fetch.py
